# ketozhang.github.io

./: .gitignore  CV.html  Dockerfile  Makefile  README.md  _config.yml  about.html  app.py  base.css  config.yaml  contacts.html  docker-compose.yml  flashcards.html  freeze.py  index.html  pyproject.toml  research.html  sitemap.xml
_dev/: Makefile  Pipfile  README.md  app.py  freeze.py  pyproject.toml  setup.py  staticpy-0.0.3-py3-none-any.whl  staticpy-0.0.4-py3-none-any.whl
_dev/assets/: _base.scss  _post.scss  _variables.scss  main.scss
_dev/configs/: base.yaml  home.yaml
_dev/docs/: about.html  contacts.html  index.html
_dev/docs/docs/: getting_started.html
_dev/docs/notes/: index.html
_dev/docs/posts/: index.html  mathjax-examples.html  python-simple-package-structure.html  the-jekyll-nokogiri-problem.html
_dev/docs/static/: base.css
_dev/notes/: index.html
_dev/notes/.Archive/: Windows_Subsystem_Linux.md
_dev/notes/Astrophysics/: index.md
_dev/notes/Others/: Software_Job_Interview.md  Studying.md
_dev/notes/Physics/: List_of_Topics_in_Physics.md
_dev/posts/: index.html  python-simple-package-structure.md  the-jekyll-nokogiri-problem.md
_dev/posts/2019_01_02_python-simple-package-structure/: index.md
_dev/posts/2020_05_12_astrostatistics_calculating_the_hubble_discrepancy/: index.md
_dev/posts/2020_05_14_matplotlib_cookbook/: index.md
_dev/posts/astronomers-scribble-1/: index.md
_dev/posts/astronomers-scribble-2/: index.md
_dev/posts/drafts/: index.md
_dev/src/: config_handler.py
_dev/static/: CV.css  CV.html  _base.scss  _flashcard.scss  _header.scss  _note.scss  _post.scss  _posts.scss  _variables.scss  base.css  datetime.js  main.css  main.css.map  main.scss  onThisPage.js
_dev/static/js/: datetime.js  search_notes.js
_dev/templates/: CV.html  CV.html.bak  Resume.html  about.html  base.html  contacts.html  flashcards.html  footer.html  header.html  home.html  note.html  onthispage.html  post.html  post_showcase.html  sitemap.xml
_dev/templates/CV/: CV_all.html  Resume_fullstack.html  Resume_general.html  Resume_software.html  base.html  education.html  professional_positions.html  publications.html  work_experience.html
_dev/test/: test.html  test.py
_dev/tests/: test_serve.py
(+3072 files in other folders)
