[tool.poetry]
name = "ketozhang.github.io"
version = "0.1.0"
description = ""
authors = ["Keto Zhang <keto.zhang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyscss = "^1.3.5"
Flask-Scss = "^0.5"
staticpy = {git = "https://github.com/ketozhang/StaticPy.git"}

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
flake8 = "^3.8.4"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
