[tool.poetry]
name = "ketozhang.github.io"
version = "0.1.0"
description = ""
authors = ["Keto Zhang <keto.zhang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
staticpy = {git = "https://github.com/ketozhang/StaticPy.git"}
Flask-Assets = "^2.0"
pyScss = "^1.3.7"


[tool.poetry.dev-dependencies]
black = "^21.7b0"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
