[tool.poetry]
name = "ketozhang.github.io"
version = "0.1.0"
description = ""
authors = ["Keto Zhang <keto.zhang@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
Flask = "<2"
Flask-Assets = "^2.0"
markupsafe= "2.0.1"
pyScss = "^1.3.7"
staticpy = {git = "https://github.com/ketozhang/StaticPy.git"}
MarkupSafe = "2.0.1"


[tool.poetry.dev-dependencies]
black = "^21.7b0"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
