[tool.poetry]
name = "ketozhang.github.io"
version = "0.1.0"
description = ""
authors = ["Keto Zhang <keto.zhang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyscss = "^1.3.5"
staticpy = {path = "staticpy-0.0.4-py3-none-any.whl"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
