[tool.poetry]
name = "ketozhang.github.io"
version = "0.1.0"
description = ""
authors = ["Keto Zhang <keto.zhang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
staticpy = {path = "/home/keto/Projects/staticpy/"}
pyscss = "^1.3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
